--- a/main.css
+++ b/main.css
@@ -17,37 +17,44 @@ body{
 }
 
 #main{
-    width: 280px;
+    width: 240px;
     max-width: 90vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 #main img{
     width:100%;
+}
+#main #hero{
     border-radius: 16px 16px 0 0;
+    border: 2px solid #1C193F;
+    border-bottom: 0px;
+}
+#main #logo{
+    width: 120%;
+    margin-top: -18px;
 }
 
 h1{
-    font-size: 42px;
+    font-size: 36px;
     margin: 0;
-    margin-top: -18px;
-    text-shadow: -4px 4px 0 #F8DCDA,
-				  4px 4px 0 #F8DCDA,
-				 4px -4px 0 #F8DCDA,
-				-4px -4px 0 #F8DCDA;
+    margin-top: 8px;
 }
 h2{
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
 }
 h3{
-    font-size: 14px;
+    font-size: 11.9px;
     text-align:justify;
     margin: 0;
-    line-height: 80%;
+    line-height: 75%;
+    opacity: .7;
+    /* margin-top: 8px; */
 }
 h4{
     font-size: 32px;
@@ -61,4 +68,91 @@ h4{
 a, a:visited{
     text-decoration: none; /* no underline */
     color: #F8DCDA;
+}
+
+#instaButton{
+    position: absolute;
+    right: 8vw;
+    width: 46px;
+    height: 46px;
+    bottom: 20vw;
+    background-color: #C6473C;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: rotate 10s linear infinite forwards;
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+    
+}
+
+#nextEvent{
+    width: calc(90vw - 12px - 12px);
+    position: absolute;
+    /* background-color: #1C193F; */
+    border: 2px solid #1C193F;
+    color: #1C193F;
+    padding: 8px 12px 8px 12px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    animation: moveDown 500ms ease-out 2s forwards;
+    opacity: 0;
+    font-family: sans-serif;
+}
+
+@keyframes moveDown {
+    from{
+        top: -100px;
+        opacity: 0;
+    }
+    to{
+        top: 12px;
+        opacity: 1;
+    }
+    
+}
+
+.cal{
+    border-radius: 3px;
+    text-align: center;
+    width: 62px;
+    height: 50px;
+    background-color: #F8DCDA;
+    margin-right: 12px;
+    border: 2px solid #1C193F;
+}
+
+#month{
+    background-color: #C6473C;
+    color: #F8DCDA;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    font-size: 14px;
+}
+#day{
+    background-color: #F8DCDA;
+    color:#1C193F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1px;
+    font-size: 21px;
+}
+
+.next{
+    font-weight: 700;
+    font-size: 12px;
+}
+.timeLocation{
+    font-size: 14px;
 }
