--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body{
 }
 
 #main{
-    width: 240px;
+    width: 260px;
     max-width: 90vw;
     display: flex;
     flex-direction: column;
@@ -45,11 +45,12 @@ h1{
     margin-top: 8px;
 }
 h2{
-    font-size: 16px;
+    font-size: 16.5px;
     margin: 0;
+    text-align:justify;
 }
 h3{
-    font-size: 11.9px;
+    font-size: 14.2px;
     text-align:justify;
     margin: 0;
     line-height: 75%;
@@ -73,8 +74,8 @@ a, a:visited{
 #instaButton{
     position: absolute;
     right: 8vw;
-    width: 46px;
-    height: 46px;
+    width: 52px;
+    height: 52px;
     bottom: 60px;
     background-color: #C6473C;
     border-radius: 50%;
@@ -126,8 +127,8 @@ a, a:visited{
 .cal{
     border-radius: 3px;
     text-align: center;
-    width: 62px;
-    height: 50px;
+    width: 60px;
+    height: calc(60px - 8px);
     background-color: #F8DCDA;
     margin-right: 12px;
     border: 2px solid #1C193F;
@@ -146,7 +147,6 @@ a, a:visited{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 1px;
     font-size: 21px;
 }
 
