--- a/main.css
+++ b/main.css
@@ -47,17 +47,21 @@ h1{
     margin-top: 8px;
 }
 h2{
-    font-size: 13.4px;
+    width: 115%;
+    font-size: 19px;
     margin: 0;
-    text-align:justify;
+    text-align:center;
+    font-weight: 400;
 }
 h3{
-    font-size: 12px;
+    width: 115%;
+    font-size: 18px;
     text-align:justify;
     margin: 0;
     line-height: 75%;
     opacity: .7;
-    /* margin-top: 8px; */
+    margin-top: 8px;
+    font-weight: 400;
 }
 h4{
     font-size: 32px;
@@ -78,7 +82,7 @@ a, a:visited{
     right: 8vw;
     width: 52px;
     height: 52px;
-    bottom: 60px;
+    bottom: 40px;
     background-color: #C6473C;
     border-radius: 50%;
     display: flex;
@@ -141,7 +145,9 @@ a, a:visited{
     color: #F8DCDA;
     padding-top: 4px;
     padding-bottom: 4px;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 800;
+    text-transform: uppercase;
 }
 #day{
     background-color: #F8DCDA;
@@ -154,10 +160,10 @@ a, a:visited{
 
 .next{
     font-weight: 700;
-    font-size: 12px;
+    font-size: 15px;
 }
 .timeLocation{
-    font-size: 14px;
+    font-size: 15px;
 }
 
 @media only screen and (min-width: 600px) {
