--- a/main.css
+++ b/main.css
@@ -134,7 +134,7 @@ a, a:visited{
     border-radius: 3px;
     text-align: center;
     width: 60px;
-    height: calc(60px - 8px);
+    height: calc(60px - 8px + 2px);
     background-color: #F8DCDA;
     margin-right: 12px;
     border: 2px solid #1C193F;
