--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body{
     margin-top: 36px;
     width: calc(290px * 1.15);
     opacity: 0;
-    animation: opacityChange 1000ms ease-in-out 900ms forwards;
+    animation: opacityChange 1000ms ease-in-out 1800ms forwards;
 }
 
 @keyframes opacityChange {
@@ -44,9 +44,10 @@ body{
 
 #imageContainer img{
     width: 80%;
-    margin-bottom: 24px;
+    margin-bottom: 48px;
     border-radius: 8px;
     filter: grayscale(1);
+    border: 2px solid #1C193F;
 }
 #imageContainer img.left{
     float:left;
@@ -125,7 +126,7 @@ a, a:visited{
 
 #instaButton{
     position: fixed;
-    right: 8vw;
+    right: calc((100vw - 290px * 1.15) / 2);
     width: 58px;
     height: 58px;
     bottom: 18px;
@@ -145,6 +146,23 @@ a, a:visited{
         transform: rotate(360deg);
     }
     
+}
+
+#openToAll{
+    position: fixed;
+    left: calc((100vw - 290px * 1.15) / 2);
+    height: 58px;
+    bottom: 18px;
+    background-color: #1C193F;
+    border-radius: 16px;
+    padding-left: 12px;
+    padding-right: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #F8DCDA;
+    text-align: center;
+    font-size: 20px;
 }
 
 #nextEvent{
@@ -235,11 +253,19 @@ a, a:visited{
 
 @media only screen and (min-width: 600px) {
     #main{
-        transform: scale(1.3);
+        transform: scale(1.1);
+    }
+    #imageContainer{
+        margin-top: 56px;
     }
     #instaButton{
         width: 80px;
         height: 80px;
+        right: 12vw;
+    }
+    #openToAll{
+        height: 80px;
+        left: 12vw;
     }
     #instaButton svg{
         transform: scale(1.5);
