--- a/main.css
+++ b/main.css
@@ -27,7 +27,8 @@ body{
 }
 
 #imageContainer{
-    margin-top: 36px;
+    padding-top: 32px;
+    text-align: center;
     width: calc(290px * 1.15);
     opacity: 0;
     animation: opacityChange 1000ms ease-in-out 1800ms forwards;
@@ -58,14 +59,24 @@ body{
 #main img{
     width:100%;
 }
-#main .hero{
+#main #heroImage{
     border-radius: 16px 16px 0 0;
     border: 2px solid #1C193F;
     border-bottom: 0px;
     object-fit: cover;
     height: 0;
     opacity: 0;
-    /* animation: reveal 1000ms ease-in-out 900ms forwards; Added in JS on video load */ 
+    animation: reveal 1000ms ease-in-out 900ms forwards;
+}
+
+#main #heroVideo{
+    border-radius: 16px 16px 0 0;
+    border: 2px solid #1C193F;
+    border-bottom: 0px;
+    object-fit: cover;
+    opacity: 0;
+    height: 0px;
+    animation: reveal 1000ms ease-in-out 900ms forwards;
 }
 
 @keyframes reveal {
@@ -100,12 +111,14 @@ h2{
     text-align: justify;
 }
 h3{
-    width: 100%;
+    width: calc(100%*.85);
     font-size: 20.3px;
     text-align:justify;
     margin: 0;
     line-height: 80%;
     margin-top: 8px;
+    margin-left: calc(100% *.075);
+    margin-bottom: 32px;
     font-weight: 400;
     opacity: .7;
 }
@@ -116,6 +129,13 @@ h4{
     2px 2px 0 #1C193F,
    2px -2px 0 #1C193F,
   -2px -2px 0 #1C193F;
+}
+
+hr{
+    width: 290px;
+    background-color: #C6473C;
+    height: 2px;
+    border: none;
 }
 
 a, a:visited{
@@ -150,7 +170,8 @@ a, a:visited{
 #openToAll{
     height: 58px;
     width: calc(100% - 24px);
-    margin-top: 36px;
+    margin-top: 48px;
+    margin-bottom: 48px;
     background-color: #1C193F;
     border-radius: 16px;
     padding-left: 12px;
@@ -175,7 +196,7 @@ a, a:visited{
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* animation: moveDown 500ms ease-out 2s forwards, pulse 750ms linear 2100ms infinite alternate; */
+    animation: moveDown 500ms ease-out 2s forwards, pulse 750ms linear 2100ms infinite alternate;
     opacity: 0;
     font-family: monospace;
 }
