--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body{
     flex-direction: column;
     background-color: #F8DCDA;
     color: #1C193F;
+    transition: background-color ease 300ms;
 }
 
 #main{
@@ -47,7 +48,7 @@ body{
     width: 80%;
     margin-bottom: 48px;
     border-radius: 8px;
-    border: 2px solid #1C193F;
+    border: 4px solid #F8DCDA;
 }
 #imageContainer img:nth-child(odd){
     float:left;
@@ -275,9 +276,6 @@ a, a:visited{
     #main{
         margin-top: 170px;
         transform: scale(1.1);
-    }
-    #imageContainer{
-        margin-top: 56px;
     }
     #instaButton{
         width: 80px;
